--- a/app/src/main/res/layout/activity_page_rezerv.xml
+++ b/app/src/main/res/layout/activity_page_rezerv.xml
@@ -1,87 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layoutDirection="ltr"
-    android:layout_height="match_parent" android:background="@drawable/mohaverinpage">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="end"
+    tools:context="azad.hallaji.farzad.com.masirezendegi.ExplainMarkaz">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <include layout="@layout/content_page_rezerv" />
 
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:padding="5dp"
-            android:layout_weight="13"
-            android:layout_marginBottom="10dp"
-            android:layout_height="match_parent"
-            android:id="@+id/toolbar2">
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="10dp"
-                    android:id="@+id/backButton"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_chevron_left_white"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:gravity="right"
-                    android:layout_weight="2">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#ffffff"
-                        android:textSize="20dp"
-                        android:text="سیستم رزرو"/>
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="10dp"
-                    android:id="@+id/menuButton"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_menu_white"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.Toolbar>
+</android.support.v4.widget.DrawerLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/Titlasdfghgfds"
-                android:text="زمان حضور در مرکز "/>
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_margin="20dp"
-                android:id="@+id/Listerezerva"
-                android:layout_height="match_parent"/>
-
-        </LinearLayout>
-
-
-
-
-    </LinearLayout>
-
-</LinearLayout>
