--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -125,7 +125,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="15dp"
-                android:id="@+id/alagestar"/>
+                android:id="@+id/alagestarmarkaz"/>
 
         </RelativeLayout>
     </LinearLayout>
