--- a/app/src/main/res/layout/activity_pasoxe_porsesh.xml
+++ b/app/src/main/res/layout/activity_pasoxe_porsesh.xml
@@ -90,7 +90,6 @@
                 android:orientation="vertical"
                 android:layout_weight="3.3">
                 <LinearLayout
-                    android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layoutDirection="ltr"
@@ -104,6 +103,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:id="@+id/sabizshey"
+                            android:layout_margin="10dp"
                             android:layout_height="match_parent"
                             android:src="@drawable/sabiz"/>
                     </LinearLayout>
@@ -116,21 +116,23 @@
                         android:layout_weight="1">
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:id="@+id/MozueSoalTextView"
                             android:textColor="#fa731e"
+                            android:gravity="center"
                             android:textSize="17dp"
                             android:layout_weight="1"
                             android:layout_gravity="center"
                             android:text=" "/>
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="2"
                             android:textSize="15dp"
                             android:text="موضوع سوال :"
                             android:layout_gravity="center"
                             android:textColor="#000"
+                            android:gravity="center"
                             android:layout_marginLeft="15dp"/>
                     </LinearLayout>
 
@@ -152,7 +154,8 @@
                         android:layout_margin="2.5dp"
                         android:layout_marginRight="5dp"
                         android:text="عنوان سوال :"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        android:layout_marginLeft="15dp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
